--- a/charts_d3.css
+++ b/charts_d3.css
@@ -11,9 +11,16 @@
     shape-rendering: crispEdges;
     stroke-width: 0px;
     height: 0px;
+    font-size: 10pt;
   }
 .background-rect{
     fill: #F9F9F9;
+}
+.axis-tag{
+    font-family: 'Avenir';
+}
+.axis-tag.wave{
+    Color: #000000;
 }
 .bar-sig { fill: #0097E2; }
 .bar-max { fill: #054477; }
