--- a/charts_d3_wind.css
+++ b/charts_d3_wind.css
@@ -25,7 +25,8 @@
   }
   .axis-top.p{
     font-family: 'Avenir Black','Avenir';
-    font-weight: 800;
+	font-weight: 800;
+	font-size: 8pt;
   }
 
   .axis-top.speed text{
