--- a/charts_d3_wind.css
+++ b/charts_d3_wind.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+body{
+	font-family: 'Lato', sans-serif;
+}
+
 .chart-container{
     overflow-x: scroll; 
     width: 1000px;
