--- a/tidecharts_d3.css
+++ b/tidecharts_d3.css
@@ -42,7 +42,7 @@ body{
     fill:#054477;
   }
   .axis-top.p{
-    font-weight: 800
+	font-weight: 800;
   }
 .background-rect{
     fill: #f6f6f6;
